jsb-compiler/src/js/generated/TangleParser.js
// Generated from src/g4/TangleParser.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import TangleParserListener from './TangleParserListener.js';
import TangleParserVisitor from './TangleParserVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class TangleParser extends antlr4.Parser {

    static grammarFileName = "TangleParser.g4";
    static literalNames = [ null, null, "'<import>'", "'<props>'", "'<code>'", 
                            null, "'='", "'('", null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, "'<'", null, "'from'", null, null, 
                            null, null, "'</import>'", null, "'</props>'", 
                            null, "'</code>'", null, null, "'>'" ];
    static symbolicNames = [ null, "WS", "IMPORT_OPEN", "PROPS_OPEN", "CODE_OPEN", 
                             "BOOL", "EQUALS", "LPAREN", "EMBEDDED_OPEN", 
                             "EMBEDDED_CLOSE", "EMBEDDED_CONTENT_CLOSE", 
                             "INT", "STRING_OPEN", "CODE_BLOCK_OPEN", "CODE_BLOCK_CLOSE", 
                             "FUNC_START", "ARGS_OPEN", "ARGS_CLOSE", "ARGS_SEPARATOR", 
                             "VAR_DEF", "STATEMENT_END", "TAG_SLASH", "TAG_OPEN", 
                             "NAME", "FROM", "IMPORT_ID", "IMPORT_PATH_OPEN", 
                             "IMPORT_STATEMENT_END", "IMPORT_WS", "IMPORT_CLOSE", 
                             "PROPS_WS", "PROPS_CLOSE", "CODE_WS", "CODE_CLOSE", 
                             "STATEMENT_WS", "TAG_WS", "TAG_CLOSE", "ATTRIBUTE_WS", 
                             "EMBEDDED_WS", "STRING_CONTENT", "STRING_CLOSE", 
                             "TEXT" ];
    static ruleNames = [ "document", "importDeclaration", "importStatement", 
                         "componentImport", "styleImport", "propsDeclaration", 
                         "propsContent", "codeDeclaration", "codeContent", 
                         "variableDeclaration", "statement", "elementsDeclaration", 
                         "content", "elementAttribute", "embeddedStatement", 
                         "expression", "variableTypes", "stringType", "textContent" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = TangleParser.ruleNames;
        this.literalNames = TangleParser.literalNames;
        this.symbolicNames = TangleParser.symbolicNames;
    }



	document() {
	    let localctx = new DocumentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, TangleParser.RULE_document);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 39;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2) {
	            this.state = 38;
	            this.importDeclaration();
	        }

	        this.state = 42;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3) {
	            this.state = 41;
	            this.propsDeclaration();
	        }

	        this.state = 45;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===4) {
	            this.state = 44;
	            this.codeDeclaration();
	        }

	        this.state = 47;
	        this.elementsDeclaration();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	importDeclaration() {
	    let localctx = new ImportDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, TangleParser.RULE_importDeclaration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 49;
	        this.match(TangleParser.IMPORT_OPEN);
	        this.state = 53;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===25 || _la===26) {
	            this.state = 50;
	            this.importStatement();
	            this.state = 55;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 56;
	        this.match(TangleParser.IMPORT_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	importStatement() {
	    let localctx = new ImportStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, TangleParser.RULE_importStatement);
	    try {
	        this.state = 60;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 25:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 58;
	            this.componentImport();
	            break;
	        case 26:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 59;
	            this.styleImport();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	componentImport() {
	    let localctx = new ComponentImportContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, TangleParser.RULE_componentImport);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 62;
	        this.match(TangleParser.IMPORT_ID);
	        this.state = 63;
	        this.match(TangleParser.FROM);
	        this.state = 64;
	        this.match(TangleParser.IMPORT_PATH_OPEN);
	        this.state = 65;
	        this.match(TangleParser.STRING_CONTENT);
	        this.state = 66;
	        this.match(TangleParser.STRING_CLOSE);
	        this.state = 67;
	        this.match(TangleParser.IMPORT_STATEMENT_END);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	styleImport() {
	    let localctx = new StyleImportContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, TangleParser.RULE_styleImport);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 69;
	        this.match(TangleParser.IMPORT_PATH_OPEN);
	        this.state = 70;
	        this.match(TangleParser.STRING_CONTENT);
	        this.state = 71;
	        this.match(TangleParser.STRING_CLOSE);
	        this.state = 72;
	        this.match(TangleParser.IMPORT_STATEMENT_END);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	propsDeclaration() {
	    let localctx = new PropsDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, TangleParser.RULE_propsDeclaration);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 74;
	        this.match(TangleParser.PROPS_OPEN);
	        this.state = 75;
	        this.propsContent();
	        this.state = 76;
	        this.match(TangleParser.PROPS_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	propsContent() {
	    let localctx = new PropsContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, TangleParser.RULE_propsContent);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 81;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===19) {
	            this.state = 78;
	            this.variableDeclaration();
	            this.state = 83;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	codeDeclaration() {
	    let localctx = new CodeDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, TangleParser.RULE_codeDeclaration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 84;
	        this.match(TangleParser.CODE_OPEN);
	        this.state = 88;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===19) {
	            this.state = 85;
	            this.codeContent();
	            this.state = 90;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 91;
	        this.match(TangleParser.CODE_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	codeContent() {
	    let localctx = new CodeContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, TangleParser.RULE_codeContent);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 93;
	        this.variableDeclaration();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variableDeclaration() {
	    let localctx = new VariableDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, TangleParser.RULE_variableDeclaration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 95;
	        this.match(TangleParser.VAR_DEF);
	        this.state = 96;
	        this.match(TangleParser.NAME);
	        this.state = 99;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===6) {
	            this.state = 97;
	            this.match(TangleParser.EQUALS);
	            this.state = 98;
	            this.statement();
	        }

	        this.state = 101;
	        this.match(TangleParser.STATEMENT_END);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, TangleParser.RULE_statement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 103;
	        this.variableTypes();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elementsDeclaration() {
	    let localctx = new ElementsDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, TangleParser.RULE_elementsDeclaration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this.match(TangleParser.TAG_OPEN);
	        this.state = 106;
	        this.match(TangleParser.NAME);
	        this.state = 110;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===23) {
	            this.state = 107;
	            this.elementAttribute();
	            this.state = 112;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 122;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 36:
	            this.state = 113;
	            this.match(TangleParser.TAG_CLOSE);
	            this.state = 114;
	            this.content();
	            this.state = 115;
	            this.match(TangleParser.TAG_OPEN);
	            this.state = 116;
	            this.match(TangleParser.TAG_SLASH);
	            this.state = 117;
	            this.match(TangleParser.NAME);
	            this.state = 118;
	            this.match(TangleParser.TAG_CLOSE);
	            break;
	        case 21:
	            this.state = 120;
	            this.match(TangleParser.TAG_SLASH);
	            this.state = 121;
	            this.match(TangleParser.TAG_CLOSE);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	content() {
	    let localctx = new ContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, TangleParser.RULE_content);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 129;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,11,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 127;
	                this._errHandler.sync(this);
	                switch(this._input.LA(1)) {
	                case 22:
	                    this.state = 124;
	                    this.elementsDeclaration();
	                    break;
	                case 8:
	                    this.state = 125;
	                    this.embeddedStatement();
	                    break;
	                case 41:
	                    this.state = 126;
	                    this.textContent();
	                    break;
	                default:
	                    throw new antlr4.error.NoViableAltException(this);
	                } 
	            }
	            this.state = 131;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,11,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elementAttribute() {
	    let localctx = new ElementAttributeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, TangleParser.RULE_elementAttribute);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 132;
	        this.match(TangleParser.NAME);
	        this.state = 133;
	        this.match(TangleParser.EQUALS);
	        this.state = 136;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 8:
	            this.state = 134;
	            this.embeddedStatement();
	            break;
	        case 12:
	            this.state = 135;
	            this.stringType();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	embeddedStatement() {
	    let localctx = new EmbeddedStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, TangleParser.RULE_embeddedStatement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 138;
	        this.match(TangleParser.EMBEDDED_OPEN);
	        this.state = 139;
	        this.expression();
	        this.state = 140;
	        this.match(TangleParser.EMBEDDED_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expression() {
	    let localctx = new ExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, TangleParser.RULE_expression);
	    try {
	        this.state = 144;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 5:
	        case 11:
	        case 12:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 142;
	            this.variableTypes();
	            break;
	        case 23:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 143;
	            this.match(TangleParser.NAME);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variableTypes() {
	    let localctx = new VariableTypesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, TangleParser.RULE_variableTypes);
	    try {
	        this.state = 149;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 11:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 146;
	            this.match(TangleParser.INT);
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 147;
	            this.stringType();
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 148;
	            this.match(TangleParser.BOOL);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stringType() {
	    let localctx = new StringTypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, TangleParser.RULE_stringType);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 151;
	        this.match(TangleParser.STRING_OPEN);
	        this.state = 152;
	        this.match(TangleParser.STRING_CONTENT);
	        this.state = 153;
	        this.match(TangleParser.STRING_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	textContent() {
	    let localctx = new TextContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, TangleParser.RULE_textContent);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 155;
	        this.match(TangleParser.TEXT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

TangleParser.EOF = antlr4.Token.EOF;
TangleParser.WS = 1;
TangleParser.IMPORT_OPEN = 2;
TangleParser.PROPS_OPEN = 3;
TangleParser.CODE_OPEN = 4;
TangleParser.BOOL = 5;
TangleParser.EQUALS = 6;
TangleParser.LPAREN = 7;
TangleParser.EMBEDDED_OPEN = 8;
TangleParser.EMBEDDED_CLOSE = 9;
TangleParser.EMBEDDED_CONTENT_CLOSE = 10;
TangleParser.INT = 11;
TangleParser.STRING_OPEN = 12;
TangleParser.CODE_BLOCK_OPEN = 13;
TangleParser.CODE_BLOCK_CLOSE = 14;
TangleParser.FUNC_START = 15;
TangleParser.ARGS_OPEN = 16;
TangleParser.ARGS_CLOSE = 17;
TangleParser.ARGS_SEPARATOR = 18;
TangleParser.VAR_DEF = 19;
TangleParser.STATEMENT_END = 20;
TangleParser.TAG_SLASH = 21;
TangleParser.TAG_OPEN = 22;
TangleParser.NAME = 23;
TangleParser.FROM = 24;
TangleParser.IMPORT_ID = 25;
TangleParser.IMPORT_PATH_OPEN = 26;
TangleParser.IMPORT_STATEMENT_END = 27;
TangleParser.IMPORT_WS = 28;
TangleParser.IMPORT_CLOSE = 29;
TangleParser.PROPS_WS = 30;
TangleParser.PROPS_CLOSE = 31;
TangleParser.CODE_WS = 32;
TangleParser.CODE_CLOSE = 33;
TangleParser.STATEMENT_WS = 34;
TangleParser.TAG_WS = 35;
TangleParser.TAG_CLOSE = 36;
TangleParser.ATTRIBUTE_WS = 37;
TangleParser.EMBEDDED_WS = 38;
TangleParser.STRING_CONTENT = 39;
TangleParser.STRING_CLOSE = 40;
TangleParser.TEXT = 41;

TangleParser.RULE_document = 0;
TangleParser.RULE_importDeclaration = 1;
TangleParser.RULE_importStatement = 2;
TangleParser.RULE_componentImport = 3;
TangleParser.RULE_styleImport = 4;
TangleParser.RULE_propsDeclaration = 5;
TangleParser.RULE_propsContent = 6;
TangleParser.RULE_codeDeclaration = 7;
TangleParser.RULE_codeContent = 8;
TangleParser.RULE_variableDeclaration = 9;
TangleParser.RULE_statement = 10;
TangleParser.RULE_elementsDeclaration = 11;
TangleParser.RULE_content = 12;
TangleParser.RULE_elementAttribute = 13;
TangleParser.RULE_embeddedStatement = 14;
TangleParser.RULE_expression = 15;
TangleParser.RULE_variableTypes = 16;
TangleParser.RULE_stringType = 17;
TangleParser.RULE_textContent = 18;

class DocumentContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TangleParser.RULE_document;
    }

	elementsDeclaration() {
	    return this.getTypedRuleContext(ElementsDeclarationContext,0);
	};

	importDeclaration() {
	    return this.getTypedRuleContext(ImportDeclarationContext,0);
	};

	propsDeclaration() {
	    return this.getTypedRuleContext(PropsDeclarationContext,0);
	};

	codeDeclaration() {
	    return this.getTypedRuleContext(CodeDeclarationContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof TangleParserListener ) {
	        listener.enterDocument(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TangleParserListener ) {
	        listener.exitDocument(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof TangleParserVisitor ) {
	        return visitor.visitDocument(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ImportDeclarationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TangleParser.RULE_importDeclaration;
    }

	IMPORT_OPEN() {
	    return this.getToken(TangleParser.IMPORT_OPEN, 0);
	};

	IMPORT_CLOSE() {
	    return this.getToken(TangleParser.IMPORT_CLOSE, 0);
	};

	importStatement = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ImportStatementContext);
	    } else {
	        return this.getTypedRuleContext(ImportStatementContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof TangleParserListener ) {
	        listener.enterImportDeclaration(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TangleParserListener ) {
	        listener.exitImportDeclaration(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof TangleParserVisitor ) {
	        return visitor.visitImportDeclaration(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ImportStatementContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TangleParser.RULE_importStatement;
    }

	componentImport() {
	    return this.getTypedRuleContext(ComponentImportContext,0);
	};

	styleImport() {
	    return this.getTypedRuleContext(StyleImportContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof TangleParserListener ) {
	        listener.enterImportStatement(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TangleParserListener ) {
	        listener.exitImportStatement(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof TangleParserVisitor ) {
	        return visitor.visitImportStatement(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ComponentImportContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TangleParser.RULE_componentImport;
    }

	IMPORT_ID() {
	    return this.getToken(TangleParser.IMPORT_ID, 0);
	};

	FROM() {
	    return this.getToken(TangleParser.FROM, 0);
	};

	IMPORT_PATH_OPEN() {
	    return this.getToken(TangleParser.IMPORT_PATH_OPEN, 0);
	};

	STRING_CONTENT() {
	    return this.getToken(TangleParser.STRING_CONTENT, 0);
	};

	STRING_CLOSE() {
	    return this.getToken(TangleParser.STRING_CLOSE, 0);
	};

	IMPORT_STATEMENT_END() {
	    return this.getToken(TangleParser.IMPORT_STATEMENT_END, 0);
	};

	enterRule(listener) {
	    if(listener instanceof TangleParserListener ) {
	        listener.enterComponentImport(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TangleParserListener ) {
	        listener.exitComponentImport(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof TangleParserVisitor ) {
	        return visitor.visitComponentImport(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class StyleImportContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TangleParser.RULE_styleImport;
    }

	IMPORT_PATH_OPEN() {
	    return this.getToken(TangleParser.IMPORT_PATH_OPEN, 0);
	};

	STRING_CONTENT() {
	    return this.getToken(TangleParser.STRING_CONTENT, 0);
	};

	STRING_CLOSE() {
	    return this.getToken(TangleParser.STRING_CLOSE, 0);
	};

	IMPORT_STATEMENT_END() {
	    return this.getToken(TangleParser.IMPORT_STATEMENT_END, 0);
	};

	enterRule(listener) {
	    if(listener instanceof TangleParserListener ) {
	        listener.enterStyleImport(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TangleParserListener ) {
	        listener.exitStyleImport(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof TangleParserVisitor ) {
	        return visitor.visitStyleImport(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class PropsDeclarationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TangleParser.RULE_propsDeclaration;
    }

	PROPS_OPEN() {
	    return this.getToken(TangleParser.PROPS_OPEN, 0);
	};

	propsContent() {
	    return this.getTypedRuleContext(PropsContentContext,0);
	};

	PROPS_CLOSE() {
	    return this.getToken(TangleParser.PROPS_CLOSE, 0);
	};

	enterRule(listener) {
	    if(listener instanceof TangleParserListener ) {
	        listener.enterPropsDeclaration(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TangleParserListener ) {
	        listener.exitPropsDeclaration(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof TangleParserVisitor ) {
	        return visitor.visitPropsDeclaration(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class PropsContentContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TangleParser.RULE_propsContent;
    }

	variableDeclaration = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(VariableDeclarationContext);
	    } else {
	        return this.getTypedRuleContext(VariableDeclarationContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof TangleParserListener ) {
	        listener.enterPropsContent(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TangleParserListener ) {
	        listener.exitPropsContent(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof TangleParserVisitor ) {
	        return visitor.visitPropsContent(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class CodeDeclarationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TangleParser.RULE_codeDeclaration;
    }

	CODE_OPEN() {
	    return this.getToken(TangleParser.CODE_OPEN, 0);
	};

	CODE_CLOSE() {
	    return this.getToken(TangleParser.CODE_CLOSE, 0);
	};
